--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,7 @@ permissions:
   id-token: write
 concurrency:
   group: "pages"
-  cancel-in-progress: true
+  cancel-in-progress: false
     # environment:
     #   name: github-pages
     #   url: ${{ steps.deployment.outputs.page_url }} 
