--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -56,7 +56,7 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v2
       env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PERSONAL_TOKEN: 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
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: allure-history
 
