--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -51,14 +51,29 @@ jobs:
         allure_report: allure-report
         allure_history: allure-history
         keep_reports: 20
+
+    - name: Setup pages
+      uses: actions/configure-pages@v2
+      with:
+        token: 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
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
+      with:
+        path: allure-report
+    - name: Deploy to Github Pages
+      id: deployment
+      uses: actions/deploy-pages@v1
+      with:
+        token: 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
+
     
-    - name: Deploy report to Github Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: 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
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history
+    # - name: Deploy report to Github Pages
+    #   if: always()
+    #   uses: peaceiris/actions-gh-pages@v2
+    #   env:
+    #     PERSONAL_TOKEN: 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
+    #     PUBLISH_BRANCH: gh-pages
+    #     PUBLISH_DIR: allure-history
 
 
 
