--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,12 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+    types:
+    - opened
+    - reopened
+    - synchronize
+    - closed
+concurrency: preview-${{ github.ref }}
 permissions:
   contents: read
   pages: write
@@ -51,6 +57,11 @@ jobs:
         allure_report: allure-report
         allure_history: allure-history
         keep_reports: 20
+
+    - name: Deploy preview
+        uses: rossjrw/pr-preview-action@v1
+        with:
+          source-dir: allure-history
     
     - name: Deploy report to Github Pages
       if: always()
@@ -59,6 +70,7 @@ jobs:
         PERSONAL_TOKEN: ${{ secrets.AHMED_SECRET }}
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: allure-history
+
 
 
 
