--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,7 +13,7 @@ permissions:
   contents: read
   pages: write
   id-token: write
-concurrency:
+concurrency: preview-${{ github.ref }}
   group: "pages"
   cancel-in-progress: false
 jobs:
