--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,8 +15,8 @@ permissions:
   id-token: write
 
 concurrency: preview-${{ github.ref }}
-  group: "pages"
-  cancel-in-progress: false
+  # group: "pages"
+  # cancel-in-progress: false
 
 jobs:
   test:
