--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -62,9 +62,9 @@ jobs:
 
     - name: Deploy preview
       uses: rossjrw/pr-preview-action@v1.4.4
-      with:
+      env:
         source-dir: ./allure-report
-        token: ${{ secrets.AHMED_SECRET }}
+        PERSONAL_TOKEN: ${{ secrets.AHMED_SECRET }}
     # - name: Deploy report to Github Pages
     #   if: always()
     #   uses: peaceiris/actions-gh-pages@v2
