--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -66,6 +66,8 @@ jobs:
       with:
         source-dir: ./allure-report
         token: ${{ secrets.AHMED_SECRET }}
+        if: always()
+        continue-on-error: true
 
     # - name: Deploy report to Github Pages
     #   if: always()
