--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ permissions:
 
 concurrency: preview-${{ github.ref }}
   # group: "pages"
-  cancel-in-progress: false
+  # cancel-in-progress: false
 
 jobs:
   test:
