--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -66,7 +66,7 @@ jobs:
       if: always()
       continue-on-error: true
       with:
-        source-dir: allure-history
+        source-dir: ./allure-report
         token: ${{ secrets.AHMED_SECRET }}
         preview-branch: gh-pages
         umbrella-dir: pr-preview
