--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,22 +10,17 @@ on:
       - closed
     branches: [ main, master ]
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
   pull-requests: write
 
 concurrency: preview-${{ github.ref }}
-  # group: "pages"
-  # cancel-in-progress: false
 
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    # environment:
-    #   name: github-pages
-    #   url: ${{ steps.deployment.outputs.page_url }} 
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -67,21 +62,12 @@ jobs:
       continue-on-error: true
       with:
         source-dir: ./allure-report
-        token: ${{ secrets.AHMED_SECRET }}
         preview-branch: gh-pages
         umbrella-dir: pr-preview
         action: auto
 
 
 
-
-    # - name: Deploy report to Github Pages
-    #   if: always()
-    #   uses: peaceiris/actions-gh-pages@v2
-    #   env:
-    #     PERSONAL_TOKEN: ${{ secrets.AHMED_SECRET }}
-    #     PUBLISH_BRANCH: gh-pages
-    #     PUBLISH_DIR: allure-history
 
 
 
